Select kit overlap fix

--- a/app/assets/stylesheets/mobile/modal-overrides.scss
+++ b/app/assets/stylesheets/mobile/modal-overrides.scss
@@ -5,7 +5,13 @@
   }
   .calendar-date-time-input {
     width: 100%;
-    margin: 0 0 1rem 1rem;
+    margin: 0 0 1rem 0;
+  }
+
+  .picker-panel {
+    //mysteriously needed to prevent it from overlapping the timezone-input
+    position: relative;
+    z-index: 0;
   }
 
   .pika-single {
